istio/deploy-istio-on-kubernetes/assets/virtualservices-addons.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: default-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - default-gateway
  http:
  - match:
    - uri:
        exact: /kiali
    rewrite:
      uri: "/"
    route:
    - destination:
        host: kiali
        port:
          number: 9090
  - match:
    - uri:
        exact: /grafana
    rewrite:
      uri: "/"
    route:
    - destination:
        host: grafana
        port:
          number: 3000
  - match:
    - uri:
        exact: /zipkin
    rewrite:
      uri: "/"
    route:
    - destination:
        host: zipkin
        port:
          number: 9411
